--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,7 @@
   "azureFunctions.projectLanguage": "C#",
   "azureFunctions.projectRuntime": "~3",
   "debug.internalConsoleOptions": "neverOpen",
-  "azureFunctions.preDeployTask": "publish (functions)"
+  "azureFunctions.preDeployTask": "publish (functions)",
+  "azureLogicAppsStandard.projectSubpath": "update-primary-key",
+  "azureFunctions.projectSubpath": "react-app-backend"
 }
